--- a/faq.html
+++ b/faq.html
@@ -419,8 +419,8 @@
     .neue-faq-sektion .kontakt-layout-container {
       display: flex;
       align-items: flex-start; /* Stellt sicher, dass Text und Linie obenbündig beginnen */
-      max-width: 950px;       /* Maximale Breite des gesamten Kontakt-Inhaltsblocks */
-      margin: 60px auto 0 auto; /* Abstand nach oben zum Titel, zentriert den Block horizontal */
+      max-width: 850px; /* Maximale Breite des gesamten Kontakt-Inhaltsblocks */
+      margin: 120px auto 0 auto; /* Abstand nach oben zum Titel vergrößert, zentriert den Block horizontal */
       padding: 0 15px;        /* Innenabstand des Blocks, falls max-width erreicht wird */
       text-align: left;       /* Stellt Linksalignierung für den Inhalt sicher */
     }
