--- a/faq.html
+++ b/faq.html
@@ -429,8 +429,8 @@
       flex: 1; /* Gleicher Flex-Wert wie rechts für mittige Linie */
       font-family: 'Poppins', sans-serif;
       font-weight: 300; /* Poppins Light */
-      font-size: 16px;  /* Anpassbare Schriftgröße */
-      line-height: 1.7; /* Gute Lesbarkeit für den Fließtext */
+      font-size: 20px;  /* Schriftgröße verdoppelt */
+      line-height: 1.9; /* Gute Lesbarkeit für den Fließtext */
       padding-right: 55px; /* Abstand vom Text zur vertikalen Linie vergrößert */
       box-sizing: border-box;
     }
@@ -448,13 +448,13 @@
       flex: 1; /* Gleicher Flex-Wert wie links für mittige Linie */
       font-family: 'Poppins', sans-serif;
       font-weight: 300; /* Poppins Light für die Kontaktwerte */
-      font-size: 16px; /* Anpassbare Schriftgröße */
+      font-size: 20px; /* Schriftgröße verdoppelt */
       padding-left: 55px; /* Abstand von der Linie zu den Kontaktinfos vergrößert */
       box-sizing: border-box;
     }
 
     .neue-faq-sektion .kontakt-info-rechts p {
-      margin: 0 0 22px 0; /* "große Lücke zwischen den Zeilen", unterer Abstand erhöht */
+      margin: 0 0 20px 0; /* "große Lücke zwischen den Zeilen", unterer Abstand erhöht */
       line-height: 1.9;   /* "Hohe Zeilenhöhe" */
     }
     .neue-faq-sektion .kontakt-info-rechts p:last-child {
