--- a/faq.html
+++ b/faq.html
@@ -9,11 +9,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
   <style>
+    html {
+      overflow-x: hidden; /* Verhindert horizontales Scrollen auch auf HTML-Ebene */
+    }
+
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
       background-color: #f9f9f9; /* Heller Hintergrund für den Inhalt */
       font-smooth: always;
+      overflow-x: hidden; /* Verhindert horizontales Scrollen für die gesamte Seite */
       /* padding-top: 93px; */ /* Platz für die fixe Navigationsleiste, falls benötigt */
     }
 
