--- a/kontakt.html
+++ b/kontakt.html
@@ -1006,15 +1006,27 @@
     }
 
     .neue-faq-sektion .kontakt-info-rechts p {
-      margin: 0 0 20px 0; 
-      line-height: 1.9;   
+      display: flex; /* Macht das p-Element zum Flex-Container */
+      align-items: baseline; /* Richtet Label und Wert an der Grundlinie aus */
+      margin: 0 0 20px 0;
+      line-height: 1.9;
     }
     .neue-faq-sektion .kontakt-info-rechts p:last-child {
       margin-bottom: 0; 
     }
 
-    .neue-faq-sektion .kontakt-label { /* Sicherstellen, dass dieser Stil auch hier ist */
-      font-weight: 500; /* Poppins Medium für die Labels */
+    .neue-faq-sektion .kontakt-label {
+      min-width: 110px; /* Feste Mindestbreite für die Labels erhöht für stärkere Einrückung */
+      display: inline-block; /* Erforderlich für min-width */
+    }
+
+    /* Stil für anklickbare Links in Kontaktinfos, um Standard-Blau zu vermeiden */
+    .neue-faq-sektion .kontakt-info-rechts a {
+      color: inherit; /* Erbt die Textfarbe vom Elternelement */
+      text-decoration: none; /* Entfernt Unterstreichung, kann bei Bedarf angepasst werden */
+    }
+    .neue-faq-sektion .kontakt-info-rechts a:hover {
+      text-decoration: underline; /* Unterstreichung bei Hover für bessere Nutzererfahrung */
     }
 
   </style>
@@ -1072,9 +1084,9 @@
       </div>
       <div class="kontakt-vertikale-linie-element"></div>
       <div class="kontakt-info-rechts">
-        <p>E-Mail: arztpraxisbazara@gmail.com</p>
-        <p>Telefon: +49 (0) 30 9939 168</p>
-        <p>Telefax: +49 (0) 30 9940 2335</p>
+        <p><span class="kontakt-label">E-Mail:</span> <a href="mailto:arztpraxisbazara@gmail.com">arztpraxisbazara@gmail.com</a></p>
+        <p><span class="kontakt-label">Telefon:</span> <a href="tel:+49309939168">+49 (0) 30 9939 168</a></p>
+        <p><span class="kontakt-label">Telefax:</span> +49 (0) 30 9940 2335</p>
       </div>
     </div>
   </div>
