--- a/kontakt.html
+++ b/kontakt.html
@@ -526,6 +526,9 @@
       margin: 80px auto 0 auto; /* Abstand nach oben vergrößert, zentriert */
       font-family: 'Poppins', sans-serif; /* Standard-Schriftart für diesen Bereich */
       font-weight: 300; /* Poppins Light als Standard */
+      padding-left: 80px; /* Inhalt um 50px nach rechts einrücken */
+      padding-top: 10px;
+      box-sizing: border-box; /* Stellt sicher, dass padding in der width-Berechnung enthalten ist */
     }
 
     .anfahrt-row {
