--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
   <style>
+    html {
+      background-color: #6e370e; /* Verhindert weiße Linie unter dem Footer */
+    }
+
     body {
       margin: 0;
       font-family: 'Inter', sans-serif;
