--- a/impressum.html
+++ b/impressum.html
@@ -149,6 +149,11 @@
     .impressum-section strong {
         font-weight: 500;
     }
+    .impressum-section a {
+        color: #6e370e; /* Standard-Linkfarbe im Impressum */
+        text-decoration-color: #6e370e; /* Farbe des Unterstrichs */
+        text-decoration-thickness: 1px; /* Dicke des Unterstrichs */
+    }
 
     /* Stile für die Fußzeile (kopiert und ggf. angepasst) */
     .main-footer {
