--- a/impressum.html
+++ b/impressum.html
@@ -435,6 +435,11 @@
 
     <p><strong>Haftungsausschluss (Disclaimer), Urheberrecht und Datenschutz:</strong></p>
     <p>Bitte beachten Sie auch unsere separate <a href="/datenschutzerklärung">Datenschutzerklärung</a>.</p>
+    <p>
+      <strong>Webdesign & technische Umsetzung:</strong><br>
+      vivenna – Websites für Arztpraxen<br>
+      <a href="https://www.vivenna-it.de" target="_blank" rel="noopener noreferrer">www.vivenna-it.de</a>
+    </p>
     <!-- Weitere spezifische Hinweise zum Haftungsausschluss und Urheberrecht können hier ergänzt werden -->
 
   </div>
