--- a/index.html
+++ b/index.html
@@ -366,6 +366,15 @@
       padding: 12px 25px;
       text-decoration: none;
       border-radius: 50px; /* Starke Abrundung für Pillenform */
+      border: 1px solid transparent; /* Platzhalter für den Rand im Normalzustand */
+      transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease; /* Sanfter Übergang */
+    }
+
+    .leistungen-button:hover {
+      background-color: #ffffff; /* Hintergrund weiß */
+      color: #6e370e; /* Schriftfarbe ändern */
+      border-color: #6e370e; /* Randfarbe setzen */
+      padding: 11px 24px; /* Padding anpassen, um die Größe durch den Rand beizubehalten */
     }
 
     .leistungen-button .arrow {
