--- a/kontakt.html
+++ b/kontakt.html
@@ -10,6 +10,34 @@
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Inter&family=Questrial&family=Poppins:wght@300;500;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
   
   <style>
+        /* Für WebKit-basierte Browser (Chrome, Safari, Edge) */
+    ::-webkit-scrollbar {
+      width: 8px;          /* schmaler */
+      height: 8px;         /* falls horizontaler Scrollbar */
+    }
+
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background-color: #8a5a34;
+      border-radius: 10px; /* stark abgerundet */
+      border: 2px solid transparent; /* für etwas Abstand */
+      background-clip: content-box;  /* macht den Rand sichtbar */
+      transition: background-color 0.3s ease;
+    }
+
+    ::-webkit-scrollbar-thumb:hover {
+      background-color: #6e370e;
+    }
+
+    /* Optional für Firefox */
+    * {
+      scrollbar-width: thin;
+      scrollbar-color: #8a5a34 transparent;
+    }
+    
     html {
       background-color: #6e370e; /* Verhindert weiße Linie unter dem Footer */
     }
